objects/VSA_Role__c.object
<CustomObject>
    <description>This object is a junction object which connects Contacts and (Volunteer) Campaigns. It is used to allow contact records to be assigned multiple roles in conjunction with an event. Currently (Nov &apos;18) VSA is not using V4S, and therefore we are not able to use Volunteer Jobs (VSA-7).</description>
    <fields>
        <fullName>Campaign_Date__c</fullName>
        <description>This field returns the campaign&apos;s Campaign Date. It is used in reporting (VSA-7).</description>
        <formula>Campaign__r.Campaign_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Volunteering_Organisation__c</fullName>
        <description>This field returns the name of the Volunteering Organisation on the campaign of the VSA role record (VSA-7).</description>
        <formula>Campaign__r.Volunteering_Organisation__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Volunteering Organisation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field contains the campaign which the volunteer role is applicable to (VSA-7).</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Volunteer_Roles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field contains the contact which occupies the volunteer role.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Volunteer_Roles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>This field contains the team which the contact is a part of in conjunction to the campaign event (VSA-7).</description>
        <label>Team</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>H&amp;S Team Member</fullName>
                </value>
                <value>
                    <fullName>Property Team Member</fullName>
                </value>
                <value>
                    <fullName>Fundraising Team Member</fullName>
                </value>
                <value>
                    <fullName>EAF Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>VSA Role</label>
    <nameField>
        <displayFormat>VR-{0000}</displayFormat>
        <label>VSA Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VSA Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>